--- a/sample/src/main/res/layout/activity_span.xml
+++ b/sample/src/main/res/layout/activity_span.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -18,4 +16,18 @@
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:text="test" />
+
+    <Button
+        android:id="@+id/manager"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:text="manager" />
+
+    <Button
+        android:id="@+id/demo1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:text="网络别人的demo" />
 </LinearLayout>
