--- a/sample/src/main/res/layout/activity_edit_input_manager.xml
+++ b/sample/src/main/res/layout/activity_edit_input_manager.xml
@@ -8,6 +8,6 @@
         android:id="@+id/input_manager"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="123"
-        android:background="@color/colorAccent" />
+        android:background="@color/colorAccent"
+        android:text="123@qq.com" />
 </LinearLayout>
